01-setup.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: logging
