09-web-app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-svc
  namespace: default
spec:
  selector:
    app: web-app
  ports:
  - name: web
    port: 80
    targetPort: 80
  - name: metrics
    port: 9113
    targetPort: 9113
  type: ClusterIP
