kibana_bridge.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana-bridge
  namespace: web
spec:
  type: ExternalName
  externalName: kibana-service.logging.svc.cluster.local
